# System_Operative_Edit

./: .editorconfig  .gitignore  BOOT_ANIMATION_IMPLEMENTATION.md  BOOT_ANIMATION_SCREENSHOT.txt  CMakeLists.txt  DRIVER_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  _codeql_detected_source_root  linker.ld  run.sh
.github/workflows/: build.yml
boot/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  boot.asm
boot/bootdata/: README.md  bootlogo.c
boot/bootsect/: COMPILE_NOTE.md  README.md  fat.S  fat32.S  isoboot.S
boot/bootvid/: bootvid.c
boot/docs/: freeldr_notes.txt
boot/freeldr/: ANIMATION_PREVIEW.md  BOOT_ANIMATION.md  README.md  boot_animation.c  disk.c  freeldr.c  memory.c  string.c  video.c
boot/freeldr/arch/i386/: hardware.c
boot/freeldr/include/: boot_animation.h  disk.h  freeldr.h  memory.h  video.h
boot/freeldr/ui/: animation.c
boot/include/: bootlogo.h  bootvid.h  hardware.h
docs/: BOOT_ANIMATION_GRAPHICS.md  BOOT_ANIMATION_VISUAL_PREVIEW.md  BUILDING.md  CI_CD.md  README.md  architecture.md  roadmap.md
drivers/: README.md
drivers/framework/: device.c  io_manager.c  io_manager.h
drivers/hal/: display.c  display.h
drivers/input/: ps2mouse.c  ps2mouse.h
drivers/video/vga/: vga.h  vga_cursor.c  vga_cursor.h  vga_driver.c  vga_font.c  vga_font.h  vga_gui.c  vga_gui.h  vga_hardware.c  vga_init.c  vga_mouse.c  vga_mouse.h  vga_operations.c  vga_screen.c
include/: gui.h  hal.h  kernel.h  kstdlib.h  libsys.h  multiboot.h  screen.h  syscall.h  types.h
include/drivers/: io_manager.h
include/drivers/ddk/: ntddk.h  wdm.h
kernel/: CMakeLists.txt  README.md  boot_splash.c  boot_splash.h  linker.ld  main.c  screen.c
kernel/gui/: gui.c
kernel/hal/: hal.c
kernel/interrupt/: gdt.c  gdt.h  gdt_flush.asm  idt.c  idt_load.asm  syscall.c  syscall.h  tss.c  tss.h
kernel/mm/: mm.c  pmm.c  pmm.h  vmm.c  vmm.h
kernel/proc/: process.c  process.h  scheduler.c  scheduler.h
lib/: README.md  memory.c
scripts/: build.sh  create-iso.sh  run-qemu.sh
tools/: README.md
user/: gui_user.c
